# Jvav

./: .NET Linker.sln  .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  csdn_get_away.txt  xmake.lua
.github/workflows/: deploy.yml  publish.yml  self-hosted.yml
Mamba/: CMakeLists.txt  xmake.lua
Mamba/src/: Mamba.cpp  Mamba.h  MambaCore.h  main.cpp
Mamba/src/Code Analysis/: Compiler.cpp  Compiler.h  Diagnostic.cpp  DiagnosticBag.cpp  DiagnosticBag.h
Mamba/src/Code Analysis/Binding/: Binder.cpp  Binder.h  BoundAssignmentExpression.cpp  BoundBinaryExpression.h  BoundBinaryOperator.cpp  BoundBinaryOperator.h  BoundBlockStatement.cpp  BoundCallExpression.h  BoundCompoundAssignmentExpression.cpp  BoundDoWhileStatement.h  BoundErrorExpression.cpp  BoundErrorExpression.h  BoundExpressionStatement.cpp  BoundForStatement.cpp  BoundFunctionDeclaration.cpp  BoundFunctionDeclaration.h  BoundIfStatement.cpp  BoundNode.h  BoundNodeKind.h  BoundNopStatement.cpp  BoundNopStatement.h  BoundScope.cpp  BoundScope.h  BoundStatement.h  BoundUnaryExpression.cpp  BoundUnaryExpression.h  BoundVariableExpression.h  ConstantFolding.h  ScopeGuard.h
Mamba/src/Code Analysis/Symbol/: FunctionSymbol.h  ParameterSymbol.h  Symbol.h  TypeSymbol.cpp  TypeSymbol.h
Mamba/src/Code Analysis/Syntax/: AssignmentExpressionSyntax.h  BlockStatementSyntax.cpp  BreakStatementSyntax.cpp  CallExpressionSyntax.cpp  CompilationUnitSyntax.cpp  Constant.h  DoWhileStatementSyntax.h  ElseClauseSyntax.h  ExpressionStatementSyntax.cpp  ExpressionSyntax.cpp  FunctionDeclarationSyntax.h  IfStatementSyntax.cpp  Lexer.cpp  MemberSyntax.h  NameExpressionSyntax.cpp  ParameterSyntax.h  Parser.cpp  Parser.h  ReturnStatementSyntax.cpp  SeperatedSyntaxList.h  StatementSyntax.cpp  SyntaxFacts.cpp  SyntaxFacts.h  SyntaxKind.h  SyntaxNode.cpp  SyntaxTree.cpp  SyntaxTree.h  UnaryExpressionSyntax.cpp
Mamba/src/Code Analysis/Text/: SourceText.cpp  SourceText.h  SourceTextInfo.h  TextSpan.cpp  TextSpan.h
Mamba/src/Code Generation/LLVM/: CompareKind.h  GenerationContext.h  LLVMBackend.cpp  LLVMBackend.h  LLVMGenerator.h
Mamba/src/Core/: Colors.h  DiagnosticPrinter.h  FunctionSignature.h  MambaLogger.h  MambaOptions.cpp  MambaOptions.h  MambaRandom.h  MambaSignalHandler.cpp  MambaSignalHandler.h  Scanner.h
Mamba/src/Core/International/: Language.h  LanguageCode.h
Mamba/src/Core/Printer/: DiagnosticPrinter.h
Mamba/test/: Binder.cpp  Lexer.cpp  Parser.cpp
Website/: CMakeLists.txt  xmake.lua
Website/src/: main.cpp
docs/: CNAME  README.md
docs/draft/: Jvav 24.typ  Jvav 25.typ
docs/website/: astro.config.mjs  package-lock.json  package.json
docs/website/src/components/: ContactCTA.astro  Footer.astro  IconPaths.ts  MainHead.astro  Nav.astro  PortfolioPreview.astro  (+2 more)
src/: main.cpp
src/.NET Linker/: .NET Linker.csproj  Program.cs
src/.NET Linker/Linker/: LinkingReader.cs
src/Mamba/: Mamba.cpp  Mamba.h  MambaCore.h  main.cpp
src/Mamba/Code Analysis/: Compilation.cpp  Compilation.h  Compiler.cpp  Compiler.h  Diagnostic.cpp  Diagnostic.h  DiagnosticBag.cpp  DiagnosticBag.h
src/Mamba/Code Generation/: Backend.h  Emitter.h  LLVMBackend.cpp  LLVMBackend.h
src/Mamba/Core/: Colors.h  DiagnosticPrinter.h  MambaRamdom.cpp  MambaSignalHandler.cpp  Recursive.h
src/Test/: Test1.cpp  Test2.cpp
src/Vertex/: MambaCore.h  VertexCore.h
(+184 files in other folders)
